<resources>
    <string name="app_name">MyHealthRecord</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="cdacproducts">A product of C-DAC</string>
    <string name="fundedby">Funded by Ministry of Electronics &amp; Information Technology,\n Government of India.</string>
    <string name="cdacrights"> All rights reserved | © 2017</string>
    <string name="patientscreen">User\'s Screen</string>
    <string name="doctorscreen">Doctor\'s Screen</string>
    <string name="logout">Logout</string>
    <string name="aboutus">About us</string>
    <string name="profile">Profile</string>
    <string name="network">Network settings</string>
    <string name="tabs_1_tab_1">Profile</string>
    <string name="tabs_1_tab_2">Data</string>
    <string name="pick_image_intent_text">Select Image</string>
    <string name="ImagePath">ApplicationIMAGEUrl</string>
    <string name="ImagePathProfile">ApplicationUrl</string>
    <string name="urlLogin">ApplicationUrl</string>
    <string name="urlEMRDATA">ViewURL</string>
    <string name="urlShareReport">ShowReportURL</string>
    <string name="ImagePathProcedures">ImgProceduresURL</string>
    <string name="ImagePathLabTests">ImgLabReportsURL</string>
    <string name="ImagePathPrescription">ImgePrescriptionURL</string>
    <string name="ImagePathMedication">ImgMedidocsURL</string>
    <string name="AccountLogin">accountURL</string>
    <string name="LoadDashboardData">WellnessDashboardDataURL</string>
    <string name="LoadDashboardDataAsc">WellnessDashboardDataAscURL</string>
    <string name="LoadAllergyData">AllergyDataURL</string>
    <string name="GetAllergyTypes">AllergyTypesURL</string>
    <string name="GetAllergySeverity">AllergySeverityURL</string>
    <string name="GetAllergyDuration">AllergyDurationURL</string>
    <string name="AddAllergyData">AddAllergyURL</string>
    <string name="LoadProblemsData">HealthConditionDataURL</string>
    <string name="GetProblemsTypes">HealthConditionTypesURL</string>
    <string name="AddProblemsData">AddHealthProblemURL</string>
    <string name="LoadImmunizationData">ImmunizationDataURL</string>
    <string name="GetImmunizationTypes">ImmunizationTypesURL</string>
    <string name="AddImmunizationData">AddImmunizationURL</string>
    <string name="LoadProceduresData">ProcedureDataURL</string>
    <string name="GetProceduresTypes">ProcedureTypesURL</string>
    <string name="AddProceduresData">AddProcedureURL</string>
    <string name="LoadLabData">LabDataURL</string>
    <string name="GetLabTypes">LabTestTypesURL</string>
    <string name="AddLabData">AddLabTestURL</string>
    <string name="LoadPrescriptionData">PrescriptionDataURL</string>
    <string name="GetPrescriptionTypes">PrescriptionTypesURL</string>
    <string name="AddPrescriptionData">AddPrescriptionURL</string>
    <string name="LoadMedicationData">MedicationDataURL</string>
    <string name="GetMedicationTypes">MedicationTypesURL</string>
    <string name="GetMedicationRoute">MedicationRouteURL</string>
    <string name="GetMedicationDosageValue">DosageValueURL</string>
    <string name="GetMedicationDosageUnit">DosageUnitURL</string>
    <string name="GetMedicationFrequencyList">FrequencyListURL</string>
    <string name="AddMedicationData">AddMedicationURL</string>
    <string name="LoadActivitiesData">activitiesdataURL</string>
    <string name="GetActivitiesTypes">ActivitiesTypesURL</string>
    <string name="AddActivitiesData">AddActivityDataURL</string>
    <string name="LoadBPData">BPDataURL</string>
    <string name="AddBPData">AddBPDataURL</string>
    <string name="LoadBoodGlucoseData">BloodGlucoseDataURL</string>
    <string name="AddBloodGlucoseData">AddBloodGlucoseDataURL</string>
    <string name="LoadWeightData">WeightDataURL</string>
    <string name="AddWeightData">AddWeightDataURL</string>
    <string name="LoadWeightDataAsc">WeightDataAscURL</string>
    <string name="LoadPersonalInfo">PersonalInfoURL</string>
    <string name="UpdatePersonalInfo">UpdatePersonalInfoURL</string>
    <string name="ImageUserProfile">UserProfileImageURL</string>
    <string name="UpdateImageUserProfile">UpdateUserImageURL</string>
    <string name="LoadEmergencyInfo">EmergencyInformationURL</string>
    <string name="UpdateEmergencyInfo">UpdateEmergencyInformationURL</string>
    <string name="LoadEmployerInfo">EmployerInformationURL</string>
    <string name="UpdateEmployerInfo">UpdateEmployerInformationURL</string>
    <string name="LoadInsuranceInfo">InsuranceInformationURL</string>
    <string name="UpdateInsuranceInfo">UpdateInsuranceInformationURL</string>
    <string name="LoadPreferencesInfo">PreferencesURL</string>
    <string name="UpdatePreferencesInfo">UpdatePreferencesInformationURL</string>
    <string name="UpdateUserProfileImage">UpdateUserImageURL</string>
    <string name="GetMedicalContactsList">ContactGridListURL</string>
    <string name="GetMedicalContactDetailByID">ContactbyidURL</string>
    <string name="GetMedicalContactSpecialityList">ContactTypesListURL</string>
    <string name="AddMedicalContact">SaveContactsURL</string>
    <string name="GetReportSharingDoctorsList">GetDoctorsListURL</string>
    <string name="ShareHealthReport">SendHealthReportURL</string>
    <string name="DeviceRegisterURL">registerDeviceURL</string>
    <string name="DeviceUnRegisterURL">unregisterDeviceURL</string>
    <string name="RegUserProfile">registeruserURL</string>
    <string name="RegUserProfileVerifyOTP">verifyURL</string>
    <string name="RegUserOTPResend">resendotpURL</string>
    <string name="aboutcontent">MyHealthRecord About</string>
    <string name="configure">Configure</string>
    <string name="aboutweb">© 2017</string>
    <string name="aboutemail">email: support_phrms@cdac.in</string>
    <string name="aboutcontact">A Product of C-DAC Mohali</string>
    <string name="appversion">Version 1.0.0</string>
    <string name="AddUserRegisterationtitle">MyHealthRecord</string>
    <string name="UserRegisterationtitle">Registeration</string>
    <string name="UserRegisterationsubheading">Create your MyHealthRecord Profile.</string>
    <string name="Dashtitle">Dashboard</string>
    <string name="Dashsubheading">Shows Graphical representation for your data.</string>
    <string name="shealth">SHealth Data</string>
    <string name="Profiletitle">Personal Information</string>
    <string name="Profilesubheading">Includes your essential information related to demographics details.</string>
    <string name="ProfileEmrtitle">Emergency Information</string>
    <string name="ProfileEmrsubheading">Includes your emergency details.</string>
    <string name="ProfileEmptitle">Employer Information</string>
    <string name="ProfileEmpsubheading">Includes your employer details.</string>
    <string name="ProfileInsrtitle">Insurance Information</string>
    <string name="ProfileInsrsubheading">Includes your insurance details.</string>
    <string name="ProfilePreftitle">Preferred Hospital</string>
    <string name="ProfilePrefsubheading">Includes your preferred hospital details.</string>
    <string name="AddAllergiestitle">Add Allergy</string>
    <string name="Allergiestitle">Allergies</string>
    <string name="Allergiessubheading">To \'Add \' and Review information about your allergies.</string>
    <string name="AllergyName">Allergy Name</string>
    <string name="AllergySearch">Search Allergy By Name</string>
    <string name="SearchTitle">Enter a search term to find the most common results for Allergy.</string>
    <string name="AllergyStill">Do you still have this allergy?</string>
    <string name="AllergyFrom">Since(months)</string>
    <string name="AllergySeverity">Severity</string>
    <string name="AllergyNotes">Notes</string>
    <string name="AllergyNotesHint">Write your comments here.</string>
    <string name="AllergyNamedisp">Allergy Name: </string>
    <string name="AllergyStilldisp">Do you still have this allergy?</string>
    <string name="AllergyFromdisp">Since(months): </string>
    <string name="AllergySeveritydisp">Severity: </string>
    <string name="AllergyNotesdisp">Notes: </string>
    <string name="AddProblemstitle">Add Problem</string>
    <string name="Problemstitle">Problems</string>
    <string name="Problemssubheading">To \'Add \' and Review information about your Problems.</string>
    <string name="ProblemsNamedisp">Problem Name: </string>
    <string name="ProblemsDDdisp">Diagnosis Date: </string>
    <string name="ProblemsDBdisp">Diagnosed By: </string>
    <string name="ProblemsNotesdisp">Notes: </string>
    <string name="ProblemsStilldisp">Do you still have this Problem?</string>
    <string name="ProblemsName">Problem Name</string>
    <string name="ProblemsSearch">Search Problem By Name</string>
    <string name="ProblemsSearchTitle">Enter a search term to find the most common results for Problems.</string>
    <string name="ProblemsDD">Diagnosis Date</string>
    <string name="ProblemsDB">Diagnosed By</string>
    <string name="ProblemsNotes">Notes</string>
    <string name="ProblemsStill">Do you still have this Problem?</string>
    <string name="ProblemsNotesHint">Write your notes here.</string>
    <string name="errddreq">Diagnosis Date(dd/MM/yyyy) required</string>
    <string name="errdd">Diagnosis Date must be in (dd/MM/yyyy)</string>
    <string name="errdby">Diagnosed By Required</string>
    <string name="AddImmunizationtitle">Add Immunization</string>
    <string name="Immunizationtitle">Immunizations</string>
    <string name="Immunizationsubheading">To \'Add \' and Review information about your Immunizations.</string>
    <string name="ImmunizationName">Immunization Name</string>
    <string name="ImmunizationSearch">Search Immunization By Name</string>
    <string name="ImmunizationSearchTitle">Enter a search term to find the most common results for Immunization.</string>
    <string name="ImmunizationTakenon">Taken On</string>
    <string name="ImmunizationComments">Comments</string>
    <string name="Prescriptiontitle">Prescriptions</string>
    <string name="PrescriptionDocNamedisp">Doctor\'s Name: </string>
    <string name="PrescriptionHCNamedisp">Hospital/Clinic\'s Name: </string>
    <string name="PrescriptionAddressdisp">Address: </string>
    <string name="PrescriptionPhonedisp">Phone: </string>
    <string name="PrescriptionDdisp">Prescription Details: </string>
    <string name="PrescriptionDatedisp">Prescription Date: </string>
    <string name="PrescriptionAttachmentsdisp">Attachments: </string>
    <string name="PrescriptionEMRLinkdisp">Click here</string>
    <string name="dataNA">Not Available</string>
    <string name="mDashboard">Dashboard</string>
    <string name="mAllergies">Allergies</string>
    <string name="mProblems">Problems</string>
    <string name="mImmunization">Immunizations</string>
    <string name="mProcedures">Procedures</string>
    <string name="mLabTest">Lab Tests</string>
    <string name="mPrescription">Prescriptions</string>
    <string name="mMedication">Medication</string>
    <string name="mActivities">Activities</string>
    <string name="mBP">Blood Pressure</string>
    <string name="mBG">Blood Glucose</string>
    <string name="mBMI">BMI</string>
    <string name="mPI">Personal Information</string>
    <string name="mEI">Emergency Information</string>
    <string name="mEMPI">Employer Information</string>
    <string name="mII">Insurance Information</string>
    <string name="mPRFI">Preferred Hospital</string>
    <string name="mAboutus">About us</string>
    <string name="mMedical">Medical Contact</string>
    <string name="mSharing">Sharing</string>
    <string name="phrms">MyHealthRecord</string>
</resources>